--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,16 +1,122 @@
-/* Styles */
-#app {
-  font: 14px 'Helvetica Neue', Helvetica, Arial, sans-serif;
-  color: #4d4d4d;
-  min-width: 550px;
-  /*max-width: 850px;*/
-  margin: 0 auto;
+* {
+  box-sizing: border-box;
 }
-
-a.active {
-  color: orange;
+body {
+  background-color: #ffffff;
 }
-
-nav {
-  padding-top: 20px;
+h1, h2, p, ul, li {
+  font-family: Helvetica, Arial, sans-serif;
+}
+/* コンテナ */
+#container {
+    display: grid;
+    grid-template-rows: 50px;
+    grid-template-columns: 50px 155px 135px 1fr 60px 60px 100px 100px 70px 70px 300px 50px;
+		text-align: center;
+		font-weight: 600;
+    background-color: #EEEEEE;
+}
+.link_box div{
+  background-color: #EEEEEE;
+}
+.link_box a{
+  /*text-decoration: none;*/
+	font-size: 11px;
+	color: #000000;
+}
+/* サーチ */
+.field {
+  margin-top: 6px;
+  border-color: gray;
+}
+.field>button {
+  /*border:none;*/
+  line-height: 30px;
+  background: #EEEEEE;
+}
+.field>input {
+  /*border:none;*/
+  line-height: 30px;
+}
+.drop-down-btn {
+  border-style: solid; border-width: 1px 0px 1px 1px;
+  border-color: gray;
+  border-radius: 10px 0px 0px 10px;
+}
+.header-search-input {
+  border-color: gray;
+  border-style: solid; border-width: 1px 0px 1px 0px;
+  padding: 2px 1px 3px 1px;
+}
+.search-submit {
+  border-style: solid; border-width: 1px 1px 1px 0px;
+  border-color: gray;
+  border-radius: 0px 10px 10px 0px;
+}
+/* ヘッダーアイテム */
+#itemA {
+    grid-row: 1 / 2;
+    grid-column: 1 / 2;
+    /* background: #f88 */
+}
+#itemB {
+    grid-row: 1 / 2;
+    grid-column: 2 / 3;
+    /* background: #8f8; */
+}
+#itemC {
+    grid-row: 1 / 2;
+    grid-column: 3 / 4;
+    /* background: #88f; */
+}
+#itemD {
+    grid-row: 1 / 2;
+    grid-column: 4 / 5;
+    /* background: #f88; */
+}
+#itemE {
+    line-height: 49px;
+    grid-row: 1 / 2;
+    grid-column: 5 / 6;
+    /* background: #8f8; */
+}
+#itemF {
+    line-height: 49px;
+    grid-row: 1 / 2;
+    grid-column: 6 / 7;
+    /* background: #88f; */
+}
+#itemG {
+    line-height: 49px;
+    grid-row: 1 / 2;
+    grid-column: 7 / 8;
+    /* background: #f88; */
+}
+#itemH {
+    line-height: 49px;
+    grid-row: 1 / 2;
+    grid-column: 8 / 9;
+    /* background: #8f8; */
+}
+#itemI {
+    line-height: 49px;
+    grid-row: 1 / 2;
+    grid-column: 9 / 10;
+    /* background: #88f; */
+}
+#itemJ {
+    line-height: 49px;
+    grid-row: 1 / 2;
+    grid-column: 10 / 11;
+    /* background: #f88; */
+}
+#itemK {
+    grid-row: 1 / 2;
+    grid-column: 11 / 12;
+    /*background: #f88;*/
+}
+#itemL {
+    grid-row: 1 / 2;
+    grid-column: 12 / 13;
+    /*background: #f88;*/
 }
