--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -363,15 +363,53 @@ h1, h2, p, ul, li, a, p {
     grid-column: 2 / 3;
     border-top: solid 1px gray;
 }
+/*h-top_img-container*/
+#h-top_img-container {
+    /*display: grid;
+    grid-template-columns:
+    repeat(1, 1fr);
+    grid-template-rows: 1fr;*/
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 50px;
+}
+#h-top_img-container a img{
+    margin: 0px auto;
+}
+.top {
+  height: 500px;
+  width: 1185px;
+  text-align: center;
+ }
+ /*親子関係*/
+.h-top_img-container {/*親div*/
+  position: relative;/*相対配置*/
+}
+/*classが持つdivに対して適応*/
+.h-top_img-container div {
+  position: absolute;/*絶対配置*/
+  color: rgb(212, 45, 40);/*文字は白に*/
+  top: 0;
+  left: 100px;/*絶対配置 px忘れない*/
+}
+/*this grid in column 1 */
+#h-top_img-inside_bar {
+  display: grid;
+  grid-template-columns: 275px;
+  grid-template-rows: repeat(4, 100px);;
+}
+/*h-top_brand-container*/
 #h-top_brand-container {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns:
+    repeat(4, 1fr);
     grid-template-rows: auto;
-    padding-left: 20px;
-    padding-right: 20px;
+    padding-left: 50px;
+    padding-right: 50px;
+    padding-bottom: 50px;
 }
 #h-top_brand-container img{
-  margin: 30px auto;
+  margin: 0px auto;
 }
 .h-heading {
   text-align: center;
